src/app/cardgame-ai/cardgame-ai.component.scss
@import '../../variables.scss';

.background-img {
  background-image: linear-gradient(to top,
      rgba(46, 49, 65, 0.8),
      rgba(46, 49, 65, 0.8)),
    url(../../assets/imgs/cardgameAI/circuit-brain-study.png);
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100vw;
  z-index: -1;
  background-size: auto, cover;
  background-attachment: fixed, fixed;
  background-position: center, center;
}

.inner {
  margin: auto;
  max-width: 1200px;
  text-align: left;
}

.title-section {
  margin-top: 20vh;
  margin-bottom: 10vh;
  background-color: transparent;
}

.subtitle {
  font-size: 1.25rem;
  font-weight: 100;
}

.body-text {
  text-align: left;
  line-height: 2rem;
}

.section-title {
  margin: 0px;
  font-size: 1.75rem;
}

.content {
  background-color: $primary;
  border-radius: 20px;
  margin-bottom: 100px;
  padding-bottom: 3rem;
}

body {
  background-color: transparent !important;
}

.inner-section {
  margin-top: 0px;
  padding-top: 0;
}

.inner-section:last-child {
  padding-bottom: 0px;
}

.inner-img {
  max-width: 75%;
  border-radius: 20px;
}


@media only screen and (max-width: 800px) {
  .inner-img {
    max-width: 100%;
  }
}

